networking/test.yaml
# networking-demo-clean.yaml
# -------------------------
# net-demo Deployment (2 replicas)
# -------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: net-demo
  template:
    metadata:
      labels:
        app: net-demo
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
# -----------------------------
# net-demo Service (ClusterIP - auto)
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: net-demo
spec:
  type: ClusterIP
  selector:
    app: net-demo
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
# -----------------------------
# net-nginx Deployment (1 replica)
# -----------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: net-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: net-nginx
  template:
    metadata:
      labels:
        app: net-nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
---
# -----------------------------
# net-nginx Service (ClusterIP - auto)
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: net-nginx
spec:
  type: ClusterIP
  selector:
    app: net-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
# -----------------------------
# net-nginx-nodeport Service (NodePort - auto nodePort)
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: net-nginx-nodeport
spec:
  type: NodePort
  selector:
    app: net-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      # nodePort omitted -> cluster will assign a value in 30000-32767
---
# -----------------------------
# net-nginx-lb Service (LoadBalancer - auto external IP)
# -----------------------------
apiVersion: v1
kind: Service
metadata:
  name: net-nginx-lb
spec:
  type: LoadBalancer
  selector:
    app: net-nginx
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      # nodePort omitted -> cluster will assign one automatically
  externalTrafficPolicy: Cluster
