networking/ingress-net-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: net-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: example.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: net-nginx
            port:
              number: 80
